--- a/test.html
+++ b/test.html
@@ -1,9 +1,94 @@
-<meta property="og:title" content="Site Title" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="http://my.site.com" />
-<meta property="og:image" content="http://my.site.com/images/thumb.png" />
-<meta property="og:description" content="Site description" />
-<meta name="theme-color" content="#FF0000">
 
-<!-- Include this to make the og:image larger -->
-<meta name="twitter:card" content="summary_large_image">
+<meta property="og:title" content="OneDest" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://map.civmc.tk/" />
+<meta property="og:description" content="/dest !
+ ├── +,-
+ │   ├── impendia*
+ │   │   ├── cascadia
+ │   │   ├── newjersey
+ │   │   ├── spqr
+ │   │   ├── cityofengland
+ │   │   ├── yngland
+ │   │   ├── fempire
+ │   │   │   └── christmasisland
+ │   │   └── cordoba
+ │   │       └── harvestportal
+ │   ├── moloka*
+ │   │   ├── deepslate
+ │   │   │   └── fox.island
+ │   │   ├── detroit
+ │   │   ├── escobar
+ │   │   └── stonegate
+ │   ├── lyrean*
+ │   │   ├── mehri
+ │   │   │   ├── develhof
+ │   │   │   ├── gutch
+ │   │   │   ├── thijo
+ │   │   │   ├── blanco
+ │   │   │   └── bazar
+ │   │   │       ├── pens
+ │   │   │       └── sostas
+ │   │   ├── lambat
+ │   │   │   ├── poblacion*
+ │   │   │   ├── katipan
+ │   │   │   ├── uni_lambat
+ │   │   │   ├── pioneer
+ │   │   │   └── cape_cocoa
+ │   │   └── pavia
+ │   │       └── sandtopia
+ │   ├── civmarket
+ │   └── margaritaville
+ ├── +,+
+ │   ├── mta
+ │   ├── medi*
+ │   │   ├── cdm
+ │   │   │   └── mehricdmportal
+ │   │   ├── danzilona
+ │   │   │   ├── sophia
+ │   │   │   ├── rosemont
+ │   │   │   ├── warehouse
+ │   │   │   ├── factories
+ │   │   │   ├── sstation
+ │   │   │   └── phoenix
+ │   │   ├── gensokyo
+ │   │   ├── lusitania
+ │   │   └── truidencia
+ │   ├── arctic*
+ │   │   ├── nara
+ │   │   │   └── qbarra*
+ │   │   ├── ichino
+ │   │   ├── nswisston
+ │   │   │   ├── arena
+ │   │   │   └── hotel
+ │   │   └── venne
+ │   └── ap*
+ │       ├── aldenfult
+ │       ├── cfarms
+ │       └── cdesert
+ ├── -,+
+ │   └── deluvia*
+ │       ├── if*
+ │       │   ├── priderock
+ │       │   ├── godhaven
+ │       │   ├── regentsburgh
+ │       │   ├── joannesberg
+ │       │   ├── vallstena
+ │       │   ├── aethia
+ │       │   ├── ostersund
+ │       │   ├── imperia
+ │       │   ├── anorlondox
+ │       │   ├── freeport
+ │       │   ├── grenada
+ │       │   └── pyramidplaza
+ │       └── founders*
+ │           ├── caliphate
+ │           ├── waabi
+ │           ├── petergrad
+ │           └── cw
+ └── -,-
+     ├── proxima
+     └── icenia
+
+* lacks a known station" />
+<meta name="theme-color" content="#FF0000">
